tests/baselines/reference/contextualNarrowingFromUnknownToObjects(strictnullchecks=false).errors.txt
tests/cases/compiler/contextualNarrowingFromUnknownToObjects.ts(25,32): error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
tests/cases/compiler/contextualNarrowingFromUnknownToObjects.ts(25,65): error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
tests/cases/compiler/contextualNarrowingFromUnknownToObjects.ts(54,32): error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
  Type 'unknown' is not assignable to type 'object'.
tests/cases/compiler/contextualNarrowingFromUnknownToObjects.ts(54,65): error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.


==== tests/cases/compiler/contextualNarrowingFromUnknownToObjects.ts (4 errors) ====
    declare function keysOfEmptyObject(o: {}): string[];
    declare function keysOfNonPrimitive(o: object): string[];
    
    namespace implicitConstraints {
        export function keyLengthsEqualUsingEmptyObjectFn<T>(a: T, b: T): [T, T] | undefined {
            if (typeof a !== "object" || typeof b !== "object" || !a || !b) {
                return undefined;
            }
            if (Array.isArray(a) || Array.isArray(b)) {
                return undefined;
            }
            if (keysOfEmptyObject(a).length !== keysOfEmptyObject(b).length) {
                return [a, b];
            }
            return undefined;
        }
        
        export function keyLengthsEqualUsingNonPrimitiveFn<T>(a: T, b: T): [T, T] | undefined {
            if (typeof a !== "object" || typeof b !== "object" || !a || !b) {
                return undefined;
            }
            if (Array.isArray(a) || Array.isArray(b)) {
                return undefined;
            }
            if (keysOfNonPrimitive(a).length !== keysOfNonPrimitive(b).length) {
                                   ~
!!! error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
                                                                    ~
!!! error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
                return [a, b];
            }
            return undefined;
        }
    }
    
    // Explicit Constraints of 'unknown'
    namespace explicitConstraintsOfUnknown {
        export function keyLengthsEqualUsingEmptyObjectFn<T extends unknown>(a: T, b: T): [T, T] | undefined {
            if (typeof a !== "object" || typeof b !== "object" || !a || !b) {
                return undefined;
            }
            if (Array.isArray(a) || Array.isArray(b)) {
                return undefined;
            }
            if (keysOfEmptyObject(a).length !== keysOfEmptyObject(b).length) {
                return [a, b];
            }
            return undefined;
        }
        
        export function keyLengthsEqualUsingNonPrimitiveFn<T extends unknown>(a: T, b: T): [T, T] | undefined {
            if (typeof a !== "object" || typeof b !== "object" || !a || !b) {
                return undefined;
            }
            if (Array.isArray(a) || Array.isArray(b)) {
                return undefined;
            }
            if (keysOfNonPrimitive(a).length !== keysOfNonPrimitive(b).length) {
                                   ~
!!! error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
!!! error TS2345:   Type 'unknown' is not assignable to type 'object'.
                                                                    ~
!!! error TS2345: Argument of type 'T' is not assignable to parameter of type 'object'.
                return [a, b];
            }
            return undefined;
        }
    }
    